objects/Team_Room_Meeting_Minutes__c.object
<CustomObject>
    <description>This object is used to capture Meeting Minutes for the Team Room</description>
    <fields>
        <fullName>Archived_Report__c</fullName>
        <formula>HYPERLINK(&quot;/015?fcf=00l90000000HRm1&quot;, &quot;CE Weekly Archived Files&quot;, &quot;_blank&quot;)</formula>
        <label>Archived Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCCAdditional__c</fullName>
        <label>Additional BCC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCCUser1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BCC User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Room_Meeting_Minutes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCAdditional__c</fullName>
        <label>Additional CC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCUser1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Room_Meeting_Minutes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>EmailSubject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HtmlBody__c</fullName>
        <label>HtmlBody</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date the Meeting or Conference Call Took Place</description>
        <inlineHelpText>Date the Meeting or Conference Call Took Place</inlineHelpText>
        <label>Meeting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <description>Notes for the Meeting.</description>
        <inlineHelpText>Notes for the Meeting.</inlineHelpText>
        <label>Meeting Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meeting_Participants__c</fullName>
        <label>Meeting Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <description>Enter the Frequency of the Meeting</description>
        <label>Meeting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                    <default>true</default>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Non-Periodical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Room__c</fullName>
        <label>Team Room</label>
        <referenceTo>Team_Room__c</referenceTo>
        <relationshipLabel>Team Room Meeting Minutes</relationshipLabel>
        <relationshipName>Team_Room_Meeting_Minutes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ToAdditional__c</fullName>
        <label>Additional To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToContact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Team Room Meeting Minutes</relationshipLabel>
        <relationshipName>Team_Room_Meeting_Minutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ToEmail1__c</fullName>
        <label>ToEmail1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ToUser1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Room_Meeting_Minutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Week__c</fullName>
        <formula>Case( 
MOD( DATE(YEAR(DATEVALUE(CreatedDate)), 1, 1) - DATE (1900, 1, 7), 7), 
0, ( DATEVALUE(CreatedDate)- DATE(YEAR(DATEVALUE(CreatedDate)),1,1) + 3) /7, 
1, ( DATEVALUE(CreatedDate)- DATE(YEAR(DATEVALUE(CreatedDate)),1,1) + 4) /7, 
2, ( DATEVALUE(CreatedDate)- DATE(YEAR(DATEVALUE(CreatedDate)),1,1) + 5) /7, 
3, ( DATEVALUE(CreatedDate)- DATE(YEAR(DATEVALUE(CreatedDate)),1,1) + 6) /7, 
4, ( DATEVALUE(CreatedDate)- DATE(YEAR(DATEVALUE(CreatedDate)),1,1) + 7) /7, 
5, ( DATEVALUE(CreatedDate)- DATE(YEAR(DATEVALUE(CreatedDate)),1,1) + 1) /7, 
6, ( DATEVALUE(CreatedDate)- DATE(YEAR(DATEVALUE(CreatedDate)),1,1) + 2) /7, 
99)</formula>
        <label>Work Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Team Room Meeting Minute</label>
    <nameField>
        <displayFormat>TRMM-{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>Team Room Meeting Minutes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Room Meeting Minutes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>